--- a/view/welcome/welcome.templ
+++ b/view/welcome/welcome.templ
@@ -9,7 +9,11 @@ templ RenderWelcomePage() {
 				<div class="flex flex-col items-center text-center max-w-prose m-auto">
 					<h1 class="text-5xl text-orange-400 p-8">Temperature Data Visualiser</h1>
 					<p class="text-pretty">
-						This web app visualises tempurature data. The Go backend produces data for every hour in a 48 hour period. The data is then visualised using d3 js. Click the button to generate temperature data and visualise it.
+						This web app visualises tempurature data.
+						<br/>
+						The Go backend produces 100 datapoints which is generated upon request to the API. The data is then visualised using d3 js.
+						<br/>
+						Click the button to generate temperature data and visualise it.
 					</p>
 					<button hx-post="/generate" hx-target="section" hx-swap="transition:true" class="my-12 bg-blue-800 rounded p-4 hover:underline underline-offset-4">Generate</button>
 				</div>
