--- a/view/generate/generateData.templ
+++ b/view/generate/generateData.templ
@@ -1,34 +1,36 @@
 package generate
 
-templ RenderGenerateData(temperatures []float64, current, difference string) {
+import "github.com/ZafirProjects/QuodOrbisChallenge/model"
+
+templ RenderGenerateData(data model.TemperatureData) {
 	<div class="flex flex-col items-center text-center">
 		<h1 class="text-5xl text-orange-400">Temperature</h1>
 		<div id="visualisation">
-			@Data(temperatures, current, difference)
+			@Data(data)
 		</div>
 		<button hx-post="/generate/new" hx-target="#visualisation" hx-swap="transition:true" class="my-12 bg-blue-800 rounded p-4 hover:underline underline-offset-4">Generate New Data</button>
 	</div>
 }
 
-templ Data(temperatures []float64, current, difference string) {
-	@Stats(current, difference)
+templ Data(data model.TemperatureData) {
+	@Stats(data.Stats)
 	<div id="container"></div>
-	@D3Chart(temperatures)
+	@D3Chart(data.Temperatures)
 }
 
-templ Stats(current, difference string) {
+templ Stats(stats model.Stats) {
 	<div class="flex flex-row my-10 pl-16">
 		<div class="px-12 items-center flex-auto">
 			<p class="text-teal-400">
 				Current Temperature
 			</p>
-			{ current }°C
+			{ stats.Current }°C
 		</div>
 		<div class="px-12 items-center flex-auto">
 			<p class="text-teal-400">
 				Total Temperature Difference
 			</p>
-			{ difference }°C
+			{ stats.Change }°C
 		</div>
 	</div>
 }
